# This file is part of Tombdrive
#
# Copyright 2022 Martin Furman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tombdrive"
authors = ["Martin Furman"]
description = "A simple cryptographic toolkit with a reverse-encryption filesystem"
repository = "https://github.com/thefixerupper/tombdrive"
keywords = ["cli", "encryption", "filesystem", "fs", "fuse"]
categories = ["command-line-utilities", "cryptography", "filesystem"]
version = "0.0.2"
license = "Apache-2.0"

publish = false

edition = "2021"

[dependencies]
aes = { version = "0.7", features = ["ctr"] }
clap = { version = "3.0", default_features = false, features = ["std"] }
hmac = { version = "0.12", default_features = false }
pbkdf2 = { version = "0.10", default_features = false }
sha2 = { version = "0.10", default_features = false }
termion = { version = "1.5" }
