# SPDX-License-Identifier: Apache-2.0
#
# TombDrive: A cryptographic toolkit
# Copyright 2022-2023 Martin Furman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tombdrive"
description = "A simple cryptographic toolkit with a virtual encryption filesystem"
repository = "https://github.com/thefixerupper/tombdrive"
version = "0.3.4"

authors = ["Martin Furman"]
license = "Apache-2.0"

edition = "2021"
publish = false

[dependencies]
aes = { version = "0.7", features = ["ctr"] }
argon2 = { version = "0.3", features = ["parallel"] }
clap = { version = "3.1", features = ["cargo", "wrap_help"] }
env_logger = { version = "0.9" }
fuser = { version = "0.10", features = ["abi-7-31"] }
libc = { version = "0.2" }
log = { version = "0.4" }
sha2 = { version = "0.10", default_features = false }
termion = { version = "1.5" }

# Optimise key derivation to get a better idea how long it will take
# in the release build
[profile.dev.package.argon2]
opt-level = 3
